--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             <button onclick="window.location.href = 'https://steamcommunity.com/sharedfiles/filedetails/?id=2949350596'">download mod from steam</button>
         </div>
 
+        <div style="color: #ff0000">
+            the documentation is still under development. some things may not be migrated from the old documentation yet: https://github.com/igorkll/SComputers_docs/tree/main/SComputers
+        </div>
+
         <div class="text">
             SComputers is the best mod adding computers to Scrap Mechanic at the moment!
             this mod originates from the ScriptableComputer mod, which is no longer supported by the developer. in fact, SComputers is an improved version of ScriptableComputer that has retained full compatibility with the original
