--- a/components.html
+++ b/components.html
@@ -21,6 +21,9 @@
         <ul class="list">
             <a class="hyper" href="./cameraTunnel.html"><li><span>cameraTunnel</span></li></a>
             <a class="hyper" href="./camera.html"><li><span>camera</span></li></a>
+            <a class="hyper" href="./antenna.html"><li><span>antenna</span></li></a>
+            <a class="hyper" href="./port.html"><li><span>port</span></li></a>
+            <a class="hyper" href="./display.html"><li><span>display</span></li></a>
         </ul>
     </body>
 </html>
