--- a/fonts.html
+++ b/fonts.html
@@ -29,8 +29,8 @@
         </p>
 
         <pre>
-            <code class="language-lua" style="width: fit-content;">--font library usage
---example for display 256x256
+            <code class="language-lua" style="width: fit-content;">--example for display 256x256
+--full fonts list: https://igorkll.github.io/fonts.html
 
 local fonts = require("fonts")
 local display = getComponent("display")
@@ -40,21 +40,30 @@ display.setTextSpacing(6) --in such large fonts, it would be more logical to spr
 display.setFontScale(1.8, 1.8) --is 32x32 small? you can make any font bigger!
 display.clear()
 local posY = 1
+local text = "TEST"
 
 display.setFont(fonts.impact_32)
-display.drawText(1, posY, "TEST", 0xff0000)
+local boxX, boxY = display.calcTextBox(text)
+display.fillRect(1, posY, boxX, boxY, 0x00ff00)
+display.drawText(1, posY, text, 0xff0000)
 posY = posY + display.getFontHeight() + 3
 
 display.setFont(fonts.verdana_32)
-display.drawText(1, posY, "TEST", 0xff0000)
+local boxX, boxY = display.calcTextBox(text)
+display.fillRect(1, posY, boxX, boxY, 0x00ff00)
+display.drawText(1, posY, text, 0xff0000)
 posY = posY + display.getFontHeight() + 3
 
 display.setFont(fonts.seguibl_32)
-display.drawText(1, posY, "TEST", 0xff0000)
+local boxX, boxY = display.calcTextBox(text)
+display.fillRect(1, posY, boxX, boxY, 0x00ff00)
+display.drawText(1, posY, text, 0xff0000)
 posY = posY + display.getFontHeight() + 3
 
 display.setFont(fonts.arial_32)
-display.drawText(1, posY, "TEST", 0xff0000)
+local boxX, boxY = display.calcTextBox(text)
+display.fillRect(1, posY, boxX, boxY, 0x00ff00)
+display.drawText(1, posY, text, 0xff0000)
 posY = posY + display.getFontHeight() + 3
 
 display.flush()
