--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
     </head>
     <body>
         <div style="display: inline;">
-            <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2949350596">
+            <a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2949350596">
                 <img src="preview.jpg" class="image" />
             </a>
-            <button onclick="window.location.href = 'https://steamcommunity.com/sharedfiles/filedetails/?id=2949350596'">download mod from steam</button>
+            <button onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=2949350596', '_blank').focus();">download mod from steam</button>
         </div>
 
         <div style="color: #ff0000">
-            the documentation is still under development. some things may not be migrated from the old documentation yet: https://github.com/igorkll/SComputers_docs/tree/main/SComputers
+            the documentation is still under development. some things may not be migrated from the old documentation yet: <a class="hyper" href="https://github.com/igorkll/SComputers_docs/tree/main/SComputers" target="_blank">https://github.com/igorkll/SComputers_docs/tree/main/SComputers</a>
         </div>
 
         <div class="text">
-            SComputers is the best mod adding computers to Scrap Mechanic at the moment!
-            this mod originates from the ScriptableComputer mod, which is no longer supported by the developer. in fact, SComputers is an improved version of ScriptableComputer that has retained full compatibility with the original
+            SComputers is the best mod adding computers to Scrap Mechanic at the moment!<br/>
+            this mod originates from the ScriptableComputer mod, which is no longer supported by the developer.<br/>
+            in fact, SComputers is an improved version of ScriptableComputer that has retained full compatibility with the original<br/>
+            the author of the original ScriptableComputer(TheFattestCat) doesn't mind that I'm doing a fork. and i got permission to create a fork
         </div>
 
         <br/>
@@ -38,9 +40,9 @@
         <br/>
         <p class="text">mod information:</p>
         <ul class="list">
-            <a class="hyper" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2949350596"><li><span>steam page</span></li></a>
-            <a class="hyper" href="./addons.html"><li><span>addon list</span></li></a>
-            <a class="hyper" href="./api.html"><li><span>api reference</span></li></a>
+            <a class="hyper" target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2949350596"><li><span>steam page</span></li></a>
+            <a class="hyper" target="_blank" href="./addons.html"><li><span>addon list</span></li></a>
+            <a class="hyper" target="_blank" href="./api.html"><li><span>api reference</span></li></a>
         </ul>
     </body>
 </html>
