--- a/addons.html
+++ b/addons.html
@@ -24,10 +24,10 @@
         <p class="text">[RU]</p>
         <p class="text">Это мой первый опыт в создании модов, если у вас возникнут проблемы - обязательно пишите о них в комментариях! Спасибо.</p>
         <p class="text">Controllers (дополнение для SComputers) - небольшой аддон для мода SComputers [FORK], который позволит вам реализовать любые механизмы с помощью программируемых контроллеров, позволяющих изменять углы поворотов каждого подшипника, и даже длину подключенных поршней! Если вам понравилось дополнение, пожалуйста, оцените его лайком.</p>
-        <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3154734887">
+        <a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3154734887">
             <img src="addons/Controllers.jpg" class="image" />
         </a>
-        <button onclick="window.location.href = 'https://steamcommunity.com/sharedfiles/filedetails/?id=3154734887'">download addon from steam</button>
+        <button onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3154734887', '_blank').focus();">download addon from steam</button>
 
 
 
@@ -49,10 +49,10 @@
         <p class="text">
             SComputers power toys - это дополнение для SComputers, которые добавляет в игру различные имбалансные предметы.
         </p>
-        <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3131135318">
+        <a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3131135318">
             <img src="addons/power_toys.jpg" class="image" />
         </a>
-        <button onclick="window.location.href = 'https://steamcommunity.com/sharedfiles/filedetails/?id=3131135318'">download addon from steam</button>
+        <button onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3131135318', '_blank').focus();">download addon from steam</button>
         
 
 
@@ -62,14 +62,15 @@
         <br/>
         <br/>
         <br/>
+        <a name="stretchable_display"></a>
         <h2 style="color:rgb(255, 255, 255);">stretchable display</h2>
         <p class="text">
             allows you to create displays of any size and resolution right inside the game.
         </p>
-        <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3293308025">
+        <a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3293308025">
             <img src="addons/stretchable_display.jpg" class="image" />
         </a>
-        <button onclick="window.location.href = 'https://steamcommunity.com/sharedfiles/filedetails/?id=3293308025'">download addon from steam</button>
+        <button onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3293308025', '_blank').focus();">download addon from steam</button>
 
 
 
@@ -89,9 +90,9 @@
             if you try to spawn two disks with the same UUID from the same blueprint, then all subsequent disks will change their UUID to a random one and copy the file system to a new UUID to avoid disk conflict.
             however, you will not be able to use these disks to transfer files through the workshop.
         </p>
-        <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3329906376">
+        <a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3329906376">
             <img src="addons/world_disks.jpg" class="image" />
         </a>
-        <button onclick="window.location.href = 'https://steamcommunity.com/sharedfiles/filedetails/?id=3329906376'">download addon from steam</button>
+        <button onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3329906376', '_blank').focus();">download addon from steam</button>
     </body>
 </html>
