added keyboard doc

--- a/components.html
+++ b/components.html
@@ -24,6 +24,7 @@
             <a class="hyper" href="./antenna.html"><li><span>antenna</span></li></a>
             <a class="hyper" href="./port.html"><li><span>port</span></li></a>
             <a class="hyper" href="./display.html"><li><span>display</span></li></a>
+            <a class="hyper" href="./keyboard.html"><li><span>keyboard</span></li></a>
         </ul>
     </body>
 </html>
