--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <br/>
         <p class="text">mod information:</p>
         <ul class="list">
-            <a class="hyper" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2949350596"><li><span>steam page</span></li></a>
+            <a class="hyper" target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2949350596"><li><span>steam page</span></li></a>
             <a class="hyper" href="./addons.html"><li><span>addon list</span></li></a>
             <a class="hyper" href="./api.html"><li><span>api reference</span></li></a>
             <a class="hyper" href="./contact_me.html"><li><span>contact me</span></li></a>
