--- a/env.html
+++ b/env.html
@@ -242,17 +242,17 @@ end</code>
         </p>
         <br/><p class="text">getComponentApi():name, api - returns what was set using setComponentApi</p>
 
-        <br/><p class="text">setLock(state:boolean, permanent:boolean) - set the flag to true so that the user cannot open the computer UI. set the permanent flag so that this parameter can no longer be changed SOMEHOW (even with the help of a function)</p>
-        <br/><p class="text">getLock():state, permanent - returns what was set using setLock</p>
+        <br/><p class="text">setLock(state:boolean) - set the flag to true so that the user cannot open the computer UI</p>
+        <br/><p class="text">getLock():state - returns what was set using setLock</p>
 
-        <br/><p class="text">setInvisible(state:boolean, permanent:boolean) - set the invisibility flag so that your computer cannot be detected using getParentComputers and getChildComputers. set the permanent flag so that this parameter can no longer be changed SOMEHOW (even with the help of a function)</p>
-        <br/><p class="text">getInvisible():state, permanent - returns what was set using setInvisible</p>
+        <br/><p class="text">setInvisible(state:boolean) - set the invisibility flag so that your computer cannot be detected using getParentComputers and getChildComputers (you can still transfer data using setComponentApi)</p>
+        <br/><p class="text">getInvisible():state - returns what was set using setInvisible</p>
 
         <pre>
             <code class="language-lua" style="width: fit-content;">--setLock & setInvisible & setComponentApi using
 --the invisibility flag makes it so that other computers cannot see this computer using the getParentComputers and getChildComputers methods
 --this is necessary in order to protect the computer from direct external interference
---let's say you have blocked the computer's GUI. even if the flag is permanent (that is, it cannot be removed even from the computer code), the computer code can still be read and written using another computer
+--let's say you have blocked the computer's GUI. the computer code can still be read and written using another computer
 --to protect against this, there is an invisibility flag
 --if you need to protect your code from direct reading/writing to ENV, but you need to communicate with other computers,
 --then you can use the network port or use the setComponentApi method so that your computer simulates the behavior
@@ -285,11 +285,11 @@ end
 --if the invisibility flag is not set, then it would be possible to unlock the computer bypassing your API with your checks
 --[[
 for _, computer in ipairs(getParentComputers()) do
-    pcall(computer.env.setLock, false)
+    computer.env.setLock(false)
 end
 
 for _, computer in ipairs(getChildComputers()) do
-    pcall(computer.env.setLock, false)
+    computer.env.setLock(false)
 end
 ]]
 
