--- a/api.html
+++ b/api.html
@@ -19,8 +19,9 @@
         </p>
 
         <p style="color:white;">
-            in the original "ScriptableComputer" luaInLua worked terribly and contained a bunch of bugs,
-            in SComputers most of the luaInLua bugs were fixed
+            in the original "ScriptableComputer" luaInLua worked terribly and contained a bunch of bugs.
+            SComputers uses a FiOne_lua virtual machine that runs about 5 times faster
+            and it does not contain any bugs except for the lack of "goto" support.
         </p>
 
         <p style="color:white;">
