--- a/minimap_component.html
+++ b/minimap_component.html
@@ -54,58 +54,152 @@
         </ul>
 
         <pre>
-            <code class="language-lua" style="width: fit-content;">local fastmode = false
-                    
+            <code class="language-lua" style="width: fit-content;">local styles = require("styles")
+
 local display = getComponent("display")
 display.reset()
+display.setClicksAllowed(true)
+display.setLight(255)
 display.clear()
-display.setSkipAtNotSight(true) --in order for the picture not to be updated for those who do not look at the screen
+display.flush()
+local fwidth, fheight = display.getFontWidth(), display.getFontHeight()
 
 local camera = getComponent("camera")
-local fov = math.rad(60)
-camera.setNonSquareFov(fov * (display.getWidth() / display.getHeight()), fov)
+local cameraStep = 512
 camera.setStep(512)
-camera.setMinimapHeight(1000)
-camera.setIsometricRender(true)
 camera.setDistance(2048)
+camera.setMinimapOffset(0, 0)
 
-local isometricSize = 64
-camera.setIsometricSize(isometricSize * (display.getWidth() / display.getHeight()), isometricSize)
+local zoneSize = 64
+local offsetX, offsetY = 0, 0
+local isometric
+local function setIsometric(_isometric)
+    isometric = _isometric
+    camera.setIsometricRender(isometric)
+    if isometric then
+        camera.setMinimapHeight(1000)
+        camera.setIsometricSize(zoneSize * (display.getWidth() / display.getHeight()), zoneSize)
+    else
+        local fov = math.rad(60)
+        camera.setNonSquareFov(fov * (display.getWidth() / display.getHeight()), fov)
+        camera.setMinimapHeight(zoneSize)
+    end
+end
+setIsometric(true)
 
 local renderSettings = {
     lampLighting = false,
     shadows = false,
     smoothingTerrain = false,
     simpleShadows = false,
-    sun = false, --is the solar disk being rendered
+    sun = false,
     fog = false,
-    reduceAccuracy = false, --allows you to use fewer display effects in fog and simpleShadows, which increases performance in some cases
-
-    constDayLightValue = nil, --you can make a constant time of day
-    shadowMultiplier = 0.6,
-    sunPercentage = 0.003, --this value is the percentage of the sun from the size of the sky
-    simpleShadowMin = 0.3, --the minimum brightness of an object that a simple shadow can give
-    simpleShadowMax = 1, --the maximum brightness of an object that a simple shadow can give
-
-    customWaterColor = nil,
-    customChemicalColor = nil,
-    customOilColor = nil,
-
-    constSkyColor = nil, --by default, it depends on the time of day
-    customSunColor = nil, --you can change the color of the sun
-    constShapeColor = nil,
-    customLiftColor = nil,
-    constTerrainColor = nil, --you can make the whole terrain one color, even blue
-    constCharacterColor = nil,
-    constJointColor = nil,
-    constHarvestableColor = nil, --allows all Harvestables to be the same color, instead of their real color
-    constAssetsColor = nil, --you can set the constant color of assets so that it is always 1 and is not determined by the material
-
-    customTerrainColor_dirt = nil,
-    customTerrainColor_grass = nil,
-    customTerrainColor_sand = nil,
-    customTerrainColor_stone = nil,
+    reduceAccuracy = false
 }
+
+local gui = require("gui").new(display)
+local pressedPosX, pressedPosY
+local scene = gui:createScene(function ()
+    camera.drawAdvanced(display, renderSettings)
+end, function (_, click)
+    if click[3] == "pressed" then
+        pressedPosX, pressedPosY = click[1], click[2]
+    elseif click[3] == "drag" then
+        if pressedPosX then
+            local perPixel = zoneSize / display.getHeight()
+            offsetX = offsetX + ((click[2] - pressedPosY) * perPixel)
+            offsetY = offsetY + ((click[1] - pressedPosX) * perPixel)
+            pressedPosX, pressedPosY = click[1], click[2]
+            camera.setMinimapOffset(offsetX, offsetY)
+        end
+    end
+end)
+scene:setAlwaysRedraw(true)
+
+local isometricSwitch = scene:createButton(2, 2, 16, fheight + 2, true, nil, "444444", "ffffff", "ee2222", "ffffff")
+isometricSwitch.state = isometric
+isometricSwitch:setCustomStyle(styles.switch)
+local isometricSwitchText = scene:createText(nil, nil, "isometric")
+isometricSwitchText.sizeY = fheight
+isometricSwitchText:setCenterRight(isometricSwitch, 3)
+
+isometricSwitch:attachCallback(function (_, state)
+    setIsometric(state)
+end)
+
+local increaseScale = scene:createButton(2, 2, 8, 8, false, "+")
+increaseScale:setDown(isometricSwitch, 3)
+increaseScale:attachCallback(function (_, state)
+    if state then
+        zoneSize = zoneSize + 16
+        if zoneSize > 1024 then
+            zoneSize = 1024
+        else
+            changeScale()
+        end
+    end
+end)
+
+local reduceScale = scene:createButton(2, 2, 8, 8, false, "-")
+reduceScale:setRight(increaseScale, 2)
+reduceScale:attachCallback(function (_, state)
+    if state then
+        zoneSize = zoneSize - 16
+        if zoneSize < 16 then
+            zoneSize = 16
+        else
+            changeScale()
+        end
+    end
+end)
+
+local zoneText = scene:createText()
+zoneText.sizeY = fheight
+zoneText:setCenterRight(reduceScale, 2)
+
+local increaseStep = scene:createButton(2, 2, 8, 8, false, "+")
+increaseStep:setDown(increaseScale, 3)
+increaseStep:attachCallback(function (_, state)
+    if state then
+        cameraStep = cameraStep + 128
+        if cameraStep > 2048 then
+            cameraStep = 2048
+        else
+            changeSpeed()
+        end
+    end
+end)
+
+local reduceStep = scene:createButton(2, 2, 8, 8, false, "-")
+reduceStep:setRight(increaseStep, 2)
+reduceStep:attachCallback(function (_, state)
+    if state then
+        cameraStep = cameraStep - 128
+        if cameraStep < 128 then
+            cameraStep = 128
+        else
+            changeSpeed()
+        end
+    end
+end)
+
+local scaleText = scene:createText()
+scaleText.sizeY = fheight
+scaleText:setCenterRight(reduceStep, 2)
+
+function changeSpeed()
+    scaleText:clear()
+    scaleText:setText("speed: " .. cameraStep)
+    camera.setStep(cameraStep)
+end
+changeSpeed()
+
+function changeScale()
+    zoneText:clear()
+    zoneText:setText("zone: " .. zoneSize)
+    setIsometric(isometric)
+end
+changeScale()
 
 function callback_loop()
     if _endtick then
@@ -114,8 +208,9 @@ function callback_loop()
         return
     end
 
-    if display.getAudience() > 0 then --if no one is looking at the screen at all, then the camera will not work
-        camera.drawAdvanced(display, renderSettings)
+    gui:tick()
+    if gui:needFlush() then
+        gui:draw()
         display.flush()
     end
 end</code>
